:construction: 对哲学中关于生活的意义有了进一步的思考

--- a/views/Skills/哲学/哲学概念梳理.md
+++ b/views/Skills/哲学/哲学概念梳理.md
@@ -79,4 +79,52 @@
 
 理发师悖论与罗索悖论等价：把每个人看成一个集合，集合的元素为该人理发的对象。
 
-## 哲学问题
+## 生活的意义
+
+我的生活的意义
+
+- 尽可能的探索真理，了解这个宇宙是怎样运转的，为人类做一些贡献，证明我来过这个世界
+- 把意识传授给机器，用机器达到永生，人工智能
+- 在历史中的一种存在，作为生命的意义
+- 实现物质理想
+
+5 一种游戏：RPG游戏啊，一种态度吧，好玩
+x 一个故事：面太窄，先有意义再有故事，不能把故事当作意义
+x 一个悲剧：片面
+x 一个喜剧：片面
+5 一种使命：解决人类的终极问题
+3 艺　　术：太感性了，好好塑造自己的人生
+2 一次冒险：个人不喜欢冒险，喜欢稳定的生活
+x 一种疾病：什么是健康
+3 欲　　望：太物质了。。或者说欲望就是你想活成的意义吧。使命：人类的欲望？
+x 涅　　槃：没欲望也不行，不能走极端。有欲望才是宇宙常态
+x 利他主义：我比较自私
+x 荣　　誉：只是生活的一部分而已
+x 受　　苦
+x 一次投资：只是生活的一部分而已
+x 各种关系：只是生活的一部分而已
+
+------
+
+我暂时觉得，生活的意义就是欲望。人类作为大自然的一部分，从无到有，有的那一刻开始，就已经被欲望驱动开始了。人类作为一个整体的欲望，理想，大同世界，共产主义？
+
+宇宙大爆炸
+夸克
+核子
+原子
+分子
+有机小分子
+有机大分子
+原始生物
+有核细胞
+鱼类
+两栖
+爬行
+哺乳
+人类
+原始社会
+奴隶社会
+封建社会
+资本主义
+社会主义
+进步的趋势，熵增
