:sparkles: 贪吃蛇AI，哈哈

--- a/Skills/Web前端/中文网页字体的最佳选择.md
+++ b/Skills/Web前端/中文网页字体的最佳选择.md
@@ -1,3 +1,8 @@
+---
+date: 2015-12-20
+tags: [ 中文字体, 网页字体, 字体 ]
+---
+
 本文是一道前端小菜，涉及到的代码只有一句，其实就是为了讲述中文网页中`body {font-family: ...}`填哪些字体和怎样填比较好。
 
 主要应该注意以下几个方面：
@@ -14,13 +19,13 @@
 
 比如使用：
 
-```css
+``` css
 {font-family: STHeiti, "Microsoft YaHei", SimSun;}
 ```
 
 而不使用：
 
-```css
+``` css
 {font-family: "华文黑体", "微软雅黑", "宋体";}
 ```
 
@@ -30,7 +35,7 @@
 
 在网页里中英混排是很常见的，你绝对不会喜欢用中文字体显示西文的效果，所以一定不要忘了先声明西文字体，并且西文字体应该在中文字体之前。例如：
 
-```css
+``` css
 {font-family: Georgia, SimSun;}
 {font-family: Arial, "Microsoft YaHei";}
 ```
@@ -39,7 +44,7 @@
 
 当列举的字体都不存在时，你可以让浏览器使用系统默认的字体族。例如：
 
-```css
+``` css
 {font-family: Georgia, SimSun, serif;}
 {font-family: Arial, "Microsoft YaHei", sans-serif;}
 ```
@@ -99,7 +104,7 @@ Android自带支持简体中文的**Droid Sans**。文泉驿微米黑由Droid Sa
 
 所以`font-family`属性可以这么写（中文字体之前的`...`代表西文字体，根据自己的口味选择就好）：
 
-```css
+``` css
 {font-family: ..., "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;}
 ```
 
@@ -119,7 +124,7 @@ Android自带支持简体中文的**Droid Sans**。文泉驿微米黑由Droid Sa
 
 如果你不清楚自己对西文字体的口味，可以这样简单设定：
 
-```css
+``` css
 {font-family: Helvetica, Tahoma, Arial, ...}
 ```
 
@@ -137,7 +142,7 @@ Android自带支持简体中文的**Droid Sans**。文泉驿微米黑由Droid Sa
 
 以下案例为最佳实践：
 
-```css
+``` css
 body {font-family: Helvetica, Tahoma, Arial, "Microsoft YaHei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;}
 ```
 
