:sparkles: 无脑贪吃蛇，哈哈

--- a/Skills/哲学/哲学概念梳理.md
+++ b/Skills/哲学/哲学概念梳理.md
@@ -128,3 +128,10 @@ x 各种关系：只是生活的一部分而已
 资本主义
 社会主义
 进步的趋势，熵增
+
+## 上帝
+
+哲学，本体论论证：
+1.我们只能把上帝设想成一个无限的和最完美的东西。
+2.一个具有除“存在”以外的所有完美性（公正、全能、全知等）的东西不能算是“最完美的”。
+3.因此，最完美的东西必然存在。
