:memo: 柯里化与反柯里化

--- a/Skills/Web前端/20170628~尤大的Live笔记.md
+++ b/Skills/Web前端/20170628~尤大的Live笔记.md
@@ -1,3 +1,5 @@
+# 不吹不黑聊聊前端框架
+
 ## 组件分类
 - 展示型
 - 接入型
@@ -36,3 +38,5 @@ colocate，一个组件一个目录
 ## 服务端数据通信
 
 ## 服务端渲染
+
+- [大神面对面：Vue.js 作者尤雨溪专访](https://zhuanlan.zhihu.com/p/27205354)
