--- a/Skills/Web前端/20170628~尤大的Live笔记.md
+++ b/Skills/Web前端/20170628~尤大的Live笔记.md
@@ -1,5 +1,13 @@
 # 不吹不黑聊聊前端框架
 
+好，那我们开始了。首先欢迎大家参加这个Live。定个基调，所以做了一个比较，放到文档里面。上来，前端是一个产品形态差异很大的。
+
+与其去浪费时间，不如这样我们作为开发者。
+
+基本框架是组件。一般是页面为单位，所有的HTML都是页面，一旦成为应用的话，很快这个应用就可以抽象成为组件树的。
+
+经验和对工具本身的理解
+
 ## 组件分类
 - 展示型
 - 接入型
